@@ -1,7 +1,7 @@
-/**
+/*
  * ContainerProxy
  *
- * Copyright (C) 2016-2024 Open Analytics
+ * Copyright (C) 2016-2025 Open Analytics
  *
  * ===========================================================================
  *
@@ -40,7 +40,7 @@ public class OverridingHeaderWriter implements HeaderWriter {
     @Override
     public void writeHeaders(HttpServletRequest request, HttpServletResponse response) {
         for (Header header : this.headers) {
-            response.setHeader(header.getName(), header.getValues().get(0));
+            response.setHeader(header.getName(), header.getValues().getFirst());
         }
     }
 
