@@ -1,7 +1,7 @@
-/**
+/*
  * ContainerProxy
  *
- * Copyright (C) 2016-2024 Open Analytics
+ * Copyright (C) 2016-2025 Open Analytics
  *
  * ===========================================================================
  *
@@ -47,17 +47,19 @@ import io.fabric8.kubernetes.api.model.ServiceAccountBuilder;
 import io.fabric8.kubernetes.api.model.ServiceList;
 import io.fabric8.kubernetes.api.model.Volume;
 import io.fabric8.kubernetes.api.model.VolumeMount;
+import io.fabric8.kubernetes.client.NamespacedKubernetesClient;
+import jakarta.json.JsonObject;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import javax.json.JsonObject;
 import java.io.ByteArrayInputStream;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -81,28 +83,28 @@ public class TestIntegrationOnKube {
         try (ContainerSetup k8s = new ContainerSetup("kubernetes")) {
             String id = inst.client.startProxy("01_hello");
             Proxy proxy = inst.proxyService.getProxy(id);
-            String containerId = proxy.getContainers().get(0).getId();
+            String containerId = proxy.getContainers().getFirst().getId();
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
-            Assertions.assertFalse(pod.getSpec().getContainers().get(0).getSecurityContext().getPrivileged());
+            Assertions.assertFalse(pod.getSpec().getContainers().getFirst().getSecurityContext().getPrivileged());
 
             ServiceList serviceList = k8s.client.services().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, serviceList.getItems().size());
-            Service service = serviceList.getItems().get(0);
+            Service service = serviceList.getItems().getFirst();
             Assertions.assertEquals(k8s.namespace, service.getMetadata().getNamespace());
             Assertions.assertEquals("sp-service-" + proxy.getId() + "-0", service.getMetadata().getName());
             Assertions.assertEquals(containerId, service.getSpec().getSelector().get("app"));
             Assertions.assertEquals(1, service.getSpec().getPorts().size());
-            Assertions.assertEquals(Integer.valueOf(3838), service.getSpec().getPorts().get(0).getTargetPort().getIntVal());
+            Assertions.assertEquals(Integer.valueOf(3838), service.getSpec().getPorts().getFirst().getTargetPort().getIntVal());
 
             inst.proxyService.stopProxy(null, proxy, true).run();
 
@@ -124,18 +126,18 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
             // Check Volumes
             Assertions.assertTrue(pod.getSpec().getVolumes().size() >= 2); // at least two volumes should be created
-            Assertions.assertEquals("shinyproxy-volume-0", pod.getSpec().getVolumes().get(0).getName());
+            Assertions.assertEquals("shinyproxy-volume-0", pod.getSpec().getVolumes().getFirst().getName());
             Assertions.assertEquals("/srv/myvolume1", pod.getSpec().getVolumes().get(0).getHostPath().getPath());
             Assertions.assertEquals("", pod.getSpec().getVolumes().get(0).getHostPath().getType());
             Assertions.assertEquals("shinyproxy-volume-1", pod.getSpec().getVolumes().get(1).getName());
@@ -143,7 +145,7 @@ public class TestIntegrationOnKube {
             Assertions.assertEquals("", pod.getSpec().getVolumes().get(1).getHostPath().getType());
 
             // Check Volume mounts
-            List<VolumeMount> volumeMounts = pod.getSpec().getContainers().get(0).getVolumeMounts();
+            List<VolumeMount> volumeMounts = pod.getSpec().getContainers().getFirst().getVolumeMounts();
             Assertions.assertTrue(volumeMounts.size() >= 2); // at least two volume mounts should be created
             Assertions.assertEquals("shinyproxy-volume-0", volumeMounts.get(0).getName());
             Assertions.assertEquals("/srv/myvolume1", volumeMounts.get(0).getMountPath());
@@ -168,17 +170,17 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
             // Check Env Variables
-            List<EnvVar> envList = pod.getSpec().getContainers().get(0).getEnv();
+            List<EnvVar> envList = pod.getSpec().getContainers().getFirst().getEnv();
             Map<String, EnvVar> env = envList.stream().collect(Collectors.toMap(EnvVar::getName, e -> e));
             Assertions.assertTrue(env.containsKey("SHINYPROXY_USERNAME"));
             Assertions.assertEquals("demo", env.get("SHINYPROXY_USERNAME").getValue()); // value is a String "null"
@@ -203,25 +205,24 @@ public class TestIntegrationOnKube {
     public void launchProxyWithSecretRef() {
         try (ContainerSetup k8s = new ContainerSetup("kubernetes")) {
             // first create the required secret
-            k8s.client.secrets().inNamespace(k8s.namespace).create(
-                new SecretBuilder().withNewMetadata().withName("mysecret").endMetadata().addToData("username", "YWRtaW4=").build());
+            k8s.client.secrets().inNamespace(k8s.namespace).resource(new SecretBuilder().withNewMetadata().withName("mysecret").endMetadata().addToData("username", "YWRtaW4=").build()).create();
 
             String id = inst.client.startProxy("01_hello_secret");
             Proxy proxy = inst.proxyService.getProxy(id);
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
             // Check Env Variables
-            List<EnvVar> envList = pod.getSpec().getContainers().get(0).getEnv();
+            List<EnvVar> envList = pod.getSpec().getContainers().getFirst().getEnv();
             Map<String, EnvVar> env = envList.stream().collect(Collectors.toMap(EnvVar::getName, e -> e));
             Assertions.assertTrue(env.containsKey("MY_SECRET"));
             Assertions.assertEquals("username", env.get("MY_SECRET").getValueFrom().getSecretKeyRef().getKey());
@@ -234,25 +235,26 @@ public class TestIntegrationOnKube {
         }
     }
 
-    @Test
-    public void launchProxyWithResources() {
+    @ValueSource(strings = {"01_hello_limits2", "01_hello_limits"})
+    @ParameterizedTest
+    public void launchProxyWithResources(String file) {
         try (ContainerSetup k8s = new ContainerSetup("kubernetes")) {
-            String id = inst.client.startProxy("01_hello_limits");
+            String id = inst.client.startProxy(file);
             Proxy proxy = inst.proxyService.getProxy(id);
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
             // Check Resource limits/requests
-            ResourceRequirements req = pod.getSpec().getContainers().get(0).getResources();
+            ResourceRequirements req = pod.getSpec().getContainers().getFirst().getResources();
             Assertions.assertEquals(new Quantity("1"), req.getRequests().get("cpu"));
             Assertions.assertEquals(new Quantity("1Gi"), req.getRequests().get("memory"));
             Assertions.assertEquals(new Quantity("2"), req.getLimits().get("cpu"));
@@ -273,16 +275,16 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
-            Assertions.assertTrue(pod.getSpec().getContainers().get(0).getSecurityContext().getPrivileged());
+            Assertions.assertTrue(pod.getSpec().getContainers().getFirst().getSecurityContext().getPrivileged());
 
             inst.proxyService.stopProxy(null, proxy, true).run();
 
@@ -296,20 +298,21 @@ public class TestIntegrationOnKube {
         final String serviceAccountName = "sp-ittest-b9fa0a24-account";
         try (ContainerSetup k8s = new ContainerSetup("kubernetes")) {
             try {
-                k8s.client.serviceAccounts().inNamespace(k8s.overriddenNamespace).create(new ServiceAccountBuilder()
+                k8s.client.serviceAccounts().inNamespace(k8s.overriddenNamespace).resource(new ServiceAccountBuilder()
                     .withNewMetadata()
                     .withName(serviceAccountName).withNamespace(k8s.overriddenNamespace)
                     .endMetadata()
-                    .build());
+                    .build())
+                    .create();
 
                 // Give Kube time to setup ServiceAccount
                 TestUtil.sleep(2000);
                 String id = inst.client.startProxy("01_hello_patches1");
                 Proxy proxy = inst.proxyService.getProxy(id);
-                String containerId = proxy.getContainers().get(0).getId();
+                String containerId = proxy.getContainers().getFirst().getId();
 
                 // Check whether the effectively used namespace is correct
-                Assertions.assertEquals(k8s.overriddenNamespace, proxy.getContainers().get(0).getRuntimeValue(BackendContainerNameKey.inst).split("/")[0]);
+                Assertions.assertEquals(k8s.overriddenNamespace, proxy.getContainers().getFirst().getRuntimeValue(BackendContainerNameKey.inst).split("/")[0]);
                 // no pods should exist in the default namespace
                 PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
                 Assertions.assertEquals(0, podList.getItems().size());
@@ -320,24 +323,24 @@ public class TestIntegrationOnKube {
 
                 podList = k8s.client.pods().inNamespace(k8s.overriddenNamespace).list();
                 Assertions.assertEquals(1, podList.getItems().size());
-                Pod pod = podList.getItems().get(0);
+                Pod pod = podList.getItems().getFirst();
                 Assertions.assertEquals("Running", pod.getStatus().getPhase());
                 Assertions.assertEquals(k8s.overriddenNamespace, pod.getMetadata().getNamespace());
                 Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
                 Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
                 Assertions.assertEquals(serviceAccountName, pod.getSpec().getServiceAccount());
-                ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+                ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
                 Assertions.assertEquals(true, container.getReady());
                 Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
                 serviceList = k8s.client.services().inNamespace(k8s.overriddenNamespace).list();
                 Assertions.assertEquals(1, serviceList.getItems().size());
-                Service service = serviceList.getItems().get(0);
+                Service service = serviceList.getItems().getFirst();
                 Assertions.assertEquals(k8s.overriddenNamespace, service.getMetadata().getNamespace());
                 Assertions.assertEquals("sp-service-" + proxy.getId() + "-0", service.getMetadata().getName());
                 Assertions.assertEquals(containerId, service.getSpec().getSelector().get("app"));
                 Assertions.assertEquals(1, service.getSpec().getPorts().size());
-                Assertions.assertEquals(Integer.valueOf(3838), service.getSpec().getPorts().get(0).getTargetPort().getIntVal());
+                Assertions.assertEquals(Integer.valueOf(3838), service.getSpec().getPorts().getFirst().getTargetPort().getIntVal());
 
                 inst.proxyService.stopProxy(null, proxy, true).run();
 
@@ -363,12 +366,12 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
@@ -381,7 +384,7 @@ public class TestIntegrationOnKube {
             Assertions.assertNotNull(pod.getSpec().getVolumes().get(0).getEmptyDir());
 
             // Check Env Variables
-            List<EnvVar> envList = pod.getSpec().getContainers().get(0).getEnv();
+            List<EnvVar> envList = pod.getSpec().getContainers().getFirst().getEnv();
             Map<String, EnvVar> env = envList.stream().collect(Collectors.toMap(EnvVar::getName, e -> e));
             Assertions.assertTrue(env.containsKey("VAR1"));
             Assertions.assertEquals("VALUE1", env.get("VAR1").getValue()); // value is a String "null"
@@ -408,18 +411,18 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.overriddenNamespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.overriddenNamespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
             PersistentVolumeClaimList claimList = k8s.client.persistentVolumeClaims().inNamespace(k8s.overriddenNamespace).list();
             Assertions.assertEquals(1, claimList.getItems().size());
-            PersistentVolumeClaim claim = claimList.getItems().get(0);
+            PersistentVolumeClaim claim = claimList.getItems().getFirst();
             Assertions.assertEquals(k8s.overriddenNamespace, claim.getMetadata().getNamespace());
             Assertions.assertEquals("manifests-pvc", claim.getMetadata().getName());
 
@@ -466,25 +469,25 @@ public class TestIntegrationOnKube {
                               storage: 5Gi""";
 
 
-            k8s.client.inNamespace(k8s.overriddenNamespace).load(new ByteArrayInputStream(pvcSpec.getBytes())).createOrReplace();
+            k8s.client.adapt(NamespacedKubernetesClient.class).inNamespace(k8s.overriddenNamespace).load(new ByteArrayInputStream(pvcSpec.getBytes())).serverSideApply();
 
             String id = inst.client.startProxy("01_hello_manifests");
             Proxy proxy = inst.proxyService.getProxy(id);
 
             PodList podList = k8s.client.pods().inNamespace(k8s.overriddenNamespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.overriddenNamespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
             PersistentVolumeClaimList claimList = k8s.client.persistentVolumeClaims().inNamespace(k8s.overriddenNamespace).list();
             Assertions.assertEquals(1, claimList.getItems().size());
-            PersistentVolumeClaim claim = claimList.getItems().get(0);
+            PersistentVolumeClaim claim = claimList.getItems().getFirst();
             Assertions.assertEquals(k8s.overriddenNamespace, claim.getMetadata().getNamespace());
             Assertions.assertEquals("manifests-pvc", claim.getMetadata().getName());
             // IMPORTANT: PVC should not have any labels, since it is the already existing resource and not created by shinyproxy
@@ -520,18 +523,18 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
 
             // check env variables
-            List<EnvVar> envList = pod.getSpec().getContainers().get(0).getEnv();
+            List<EnvVar> envList = pod.getSpec().getContainers().getFirst().getEnv();
             Map<String, EnvVar> env = envList.stream().collect(Collectors.toMap(EnvVar::getName, e -> e));
             Assertions.assertTrue(env.containsKey("CUSTOM_USERNAME"));
             Assertions.assertTrue(env.containsKey("PROXY_ID"));
@@ -540,12 +543,12 @@ public class TestIntegrationOnKube {
 
             PersistentVolumeClaimList claimList = k8s.client.persistentVolumeClaims().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, claimList.getItems().size());
-            PersistentVolumeClaim claim = claimList.getItems().get(0);
+            PersistentVolumeClaim claim = claimList.getItems().getFirst();
             Assertions.assertEquals(k8s.namespace, claim.getMetadata().getNamespace());
             Assertions.assertEquals("home-dir-pvc-demo", claim.getMetadata().getName());
 
             // check volume mount
-            Volume volume = pod.getSpec().getVolumes().get(0);
+            Volume volume = pod.getSpec().getVolumes().getFirst();
             Assertions.assertEquals("home-dir-pvc-demo", volume.getName());
             Assertions.assertEquals("home-dir-pvc-demo", volume.getPersistentVolumeClaim().getClaimName());
 
@@ -573,18 +576,18 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.overriddenNamespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.overriddenNamespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
             PersistentVolumeClaimList claimList = k8s.client.persistentVolumeClaims().inNamespace(k8s.overriddenNamespace).list();
             Assertions.assertEquals(1, claimList.getItems().size());
-            PersistentVolumeClaim claim = claimList.getItems().get(0);
+            PersistentVolumeClaim claim = claimList.getItems().getFirst();
             Assertions.assertEquals(k8s.overriddenNamespace, claim.getMetadata().getNamespace());
             Assertions.assertEquals("manifests-pvc", claim.getMetadata().getName());
 
@@ -614,12 +617,12 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
@@ -640,7 +643,7 @@ public class TestIntegrationOnKube {
         // case 2: secret does already exist, check that it does not get overridden
         try (ContainerSetup k8s = new ContainerSetup("kubernetes")) {
             // first create secret
-            k8s.client.secrets().inNamespace(k8s.namespace).create(new SecretBuilder()
+            k8s.client.secrets().inNamespace(k8s.namespace).resource(new SecretBuilder()
                 .withNewMetadata()
                 .withName("manifests-secret")
                 .withLabels(Map.of(
@@ -650,19 +653,20 @@ public class TestIntegrationOnKube {
                 ))
                 .endMetadata()
                 .withData(Collections.singletonMap("password", "b2xkX3Bhc3N3b3Jk"))
-                .build());
+                .build())
+                .create();
 
             String id = inst.client.startProxy("01_hello_manifests_policy_create_once");
             Proxy proxy = inst.proxyService.getProxy(id);
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
@@ -691,12 +695,12 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
@@ -718,12 +722,13 @@ public class TestIntegrationOnKube {
         // case 2: secret does already exist, check that it gets overridden
         try (ContainerSetup k8s = new ContainerSetup("kubernetes")) {
             // first create secret
-            Secret originalSecret = k8s.client.secrets().inNamespace(k8s.namespace).create(new SecretBuilder()
+            Secret originalSecret = k8s.client.secrets().inNamespace(k8s.namespace).resource(new SecretBuilder()
                 .withNewMetadata()
                 .withName("manifests-secret")
                 .endMetadata()
                 .withData(Collections.singletonMap("password", "b2xkX3Bhc3N3b3Jk"))
-                .build());
+                .build())
+                .create();
 
             String originalCreationTimestamp = originalSecret.getMetadata().getCreationTimestamp();
 
@@ -734,12 +739,12 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
@@ -766,24 +771,25 @@ public class TestIntegrationOnKube {
         // case 1: secret does already exist, check that it gets deleted
         try (ContainerSetup k8s = new ContainerSetup("kubernetes")) {
             // first create secret
-            k8s.client.secrets().inNamespace(k8s.namespace).create(new SecretBuilder()
+            k8s.client.secrets().inNamespace(k8s.namespace).resource(new SecretBuilder()
                 .withNewMetadata()
                 .withName("manifests-secret")
                 .endMetadata()
                 .withData(Collections.singletonMap("password", "b2xkX3Bhc3N3b3Jk"))
-                .build());
+                .build())
+                .create();
 
             String id = inst.client.startProxy("01_hello_manifests_policy_delete");
             Proxy proxy = inst.proxyService.getProxy(id);
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
@@ -806,12 +812,12 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
@@ -833,12 +839,13 @@ public class TestIntegrationOnKube {
         // case 2: secret does already exist, check that it gets overridden
         try (ContainerSetup k8s = new ContainerSetup("kubernetes")) {
             // first create secret
-            Secret originalSecret = k8s.client.secrets().inNamespace(k8s.namespace).create(new SecretBuilder()
+            Secret originalSecret = k8s.client.secrets().inNamespace(k8s.namespace).resource(new SecretBuilder()
                 .withNewMetadata()
                 .withName("manifests-secret")
                 .endMetadata()
                 .withData(Collections.singletonMap("password", "b2xkX3Bhc3N3b3Jk"))
-                .build());
+                .build())
+                .create();
 
             String originalCreationTimestamp = originalSecret.getMetadata().getCreationTimestamp();
 
@@ -850,12 +857,12 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
@@ -886,12 +893,12 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
@@ -942,12 +949,12 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
@@ -995,24 +1002,25 @@ public class TestIntegrationOnKube {
         // case 1: secret does already exist, check that it gets deleted
         try (ContainerSetup k8s = new ContainerSetup("kubernetes")) {
             // first create secret
-            k8s.client.secrets().inNamespace(k8s.namespace).create(new SecretBuilder()
+            k8s.client.secrets().inNamespace(k8s.namespace).resource(new SecretBuilder()
                 .withNewMetadata()
                 .withName("manifests-secret")
                 .endMetadata()
                 .withData(Collections.singletonMap("password", "b2xkX3Bhc3N3b3Jk"))
-                .build());
+                .build())
+                .create();
 
             String id = inst.client.startProxy("01_hello_persistent_manifests_policy_delete");
             Proxy proxy = inst.proxyService.getProxy(id);
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
@@ -1035,12 +1043,12 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
@@ -1091,32 +1099,32 @@ public class TestIntegrationOnKube {
         try (ContainerSetup k8s = new ContainerSetup("kubernetes")) {
             String id = inst.client.startProxy("01_hello_advanced_runtime_labels");
             Proxy proxy = inst.proxyService.getProxy(id);
-            String containerId = proxy.getContainers().get(0).getId();
+            String containerId = proxy.getContainers().getFirst().getId();
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
-            Assertions.assertFalse(pod.getSpec().getContainers().get(0).getSecurityContext().getPrivileged());
+            Assertions.assertFalse(pod.getSpec().getContainers().getFirst().getSecurityContext().getPrivileged());
 
             ServiceList serviceList = k8s.client.services().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, serviceList.getItems().size());
-            Service service = serviceList.getItems().get(0);
+            Service service = serviceList.getItems().getFirst();
             Assertions.assertEquals(k8s.namespace, service.getMetadata().getNamespace());
             Assertions.assertEquals("sp-service-" + proxy.getId() + "-0", service.getMetadata().getName());
             Assertions.assertEquals(containerId, service.getSpec().getSelector().get("app"));
             Assertions.assertEquals(1, service.getSpec().getPorts().size());
-            Assertions.assertEquals(Integer.valueOf(3838), service.getSpec().getPorts().get(0).getTargetPort().getIntVal());
+            Assertions.assertEquals(Integer.valueOf(3838), service.getSpec().getPorts().getFirst().getTargetPort().getIntVal());
 
 
             // assert env
-            List<EnvVar> envList = pod.getSpec().getContainers().get(0).getEnv();
+            List<EnvVar> envList = pod.getSpec().getContainers().getFirst().getEnv();
             Map<String, EnvVar> env = envList.stream().collect(Collectors.toMap(EnvVar::getName, e -> e));
 
             Assertions.assertTrue(env.containsKey("TEST_PROXY_ID"));
@@ -1163,13 +1171,13 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            Pod pod = podList.getItems().getFirst();
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
 
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("ledfan/rstudio_base_r:4_0_5"));
-            Assertions.assertEquals("2", pod.getSpec().getContainers().get(0).getResources().getLimits().get("memory").getAmount());
-            List<EnvVar> envList = pod.getSpec().getContainers().get(0).getEnv();
+            Assertions.assertEquals("2", pod.getSpec().getContainers().getFirst().getResources().getLimits().get("memory").getAmount());
+            List<EnvVar> envList = pod.getSpec().getContainers().getFirst().getEnv();
             Map<String, EnvVar> env = envList.stream().collect(Collectors.toMap(EnvVar::getName, e -> e));
 
             Assertions.assertTrue(env.containsKey("ENVIRONMENT"));
@@ -1200,13 +1208,13 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            Pod pod = podList.getItems().getFirst();
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
 
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("ledfan/rstudio_base_r:4_0_5"));
-            Assertions.assertEquals("2", pod.getSpec().getContainers().get(0).getResources().getLimits().get("memory").getAmount());
-            List<EnvVar> envList = pod.getSpec().getContainers().get(0).getEnv();
+            Assertions.assertEquals("2", pod.getSpec().getContainers().getFirst().getResources().getLimits().get("memory").getAmount());
+            List<EnvVar> envList = pod.getSpec().getContainers().getFirst().getEnv();
             Map<String, EnvVar> env = envList.stream().collect(Collectors.toMap(EnvVar::getName, e -> e));
 
             Assertions.assertTrue(env.containsKey("VALUESET_NAME"));
@@ -1228,8 +1236,8 @@ public class TestIntegrationOnKube {
                 "version", "4.0.5",
                 "memory", "2G"
             ));
-            Assertions.assertEquals(resp.getString("status"), "error");
-            Assertions.assertEquals(resp.getString("data"), "Failed to start proxy");
+            Assertions.assertEquals("error", resp.getString("status"));
+            Assertions.assertEquals("Failed to start proxy", resp.getString("data"));
 
             // case 2: test using ProxyService
             Authentication auth = UsernamePasswordAuthenticationToken.authenticated("demo", null, List.of(new SimpleGrantedAuthority("ROLE_GROUP1")));
@@ -1273,13 +1281,13 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            Pod pod = podList.getItems().getFirst();
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
 
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("ledfan/rstudio_base_r:4_0_5"));
-            Assertions.assertEquals("2", pod.getSpec().getContainers().get(0).getResources().getLimits().get("memory").getAmount());
-            List<EnvVar> envList = pod.getSpec().getContainers().get(0).getEnv();
+            Assertions.assertEquals("2", pod.getSpec().getContainers().getFirst().getResources().getLimits().get("memory").getAmount());
+            List<EnvVar> envList = pod.getSpec().getContainers().getFirst().getEnv();
             Map<String, EnvVar> env = envList.stream().collect(Collectors.toMap(EnvVar::getName, e -> e));
 
             Assertions.assertTrue(env.containsKey("ENVIRONMENT"));
@@ -1326,12 +1334,12 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.overriddenNamespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.overriddenNamespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
@@ -1369,17 +1377,17 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
             // Check Env Variables
-            List<EnvVar> envList = pod.getSpec().getContainers().get(0).getEnv();
+            List<EnvVar> envList = pod.getSpec().getContainers().getFirst().getEnv();
             Map<String, EnvVar> env = envList.stream().collect(Collectors.toMap(EnvVar::getName, e -> e));
             Assertions.assertTrue(env.containsKey("VAR_FOR_DEMO"));
             Assertions.assertEquals("VALUE", env.get("VAR_FOR_DEMO").getValue()); // value is a String "null"
@@ -1398,17 +1406,17 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
             // Check Env Variables
-            List<EnvVar> envList = pod.getSpec().getContainers().get(0).getEnv();
+            List<EnvVar> envList = pod.getSpec().getContainers().getFirst().getEnv();
             Map<String, EnvVar> env = envList.stream().collect(Collectors.toMap(EnvVar::getName, e -> e));
             Assertions.assertFalse(env.containsKey("VAR_FOR_DEMO"));
             Assertions.assertTrue(env.containsKey("VAR_FOR_DEMO2"));
@@ -1430,12 +1438,12 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
@@ -1447,7 +1455,7 @@ public class TestIntegrationOnKube {
             // additional persistent manifest
             PersistentVolumeClaimList claimList = k8s.client.persistentVolumeClaims().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, claimList.getItems().size());
-            PersistentVolumeClaim claim = claimList.getItems().get(0);
+            PersistentVolumeClaim claim = claimList.getItems().getFirst();
             Assertions.assertEquals(k8s.namespace, claim.getMetadata().getNamespace());
             Assertions.assertEquals("manifests-pvc-demo", claim.getMetadata().getName());
 
@@ -1470,12 +1478,12 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
 
@@ -1487,7 +1495,7 @@ public class TestIntegrationOnKube {
             // additional persistent manifest
             PersistentVolumeClaimList claimList = k8s.client.persistentVolumeClaims().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, claimList.getItems().size());
-            PersistentVolumeClaim claim = claimList.getItems().get(0);
+            PersistentVolumeClaim claim = claimList.getItems().getFirst();
             Assertions.assertEquals(k8s.namespace, claim.getMetadata().getNamespace());
             Assertions.assertEquals("manifests-pvc-demo2", claim.getMetadata().getName());
 
@@ -1511,15 +1519,15 @@ public class TestIntegrationOnKube {
 
             PodList podList = k8s.client.pods().inNamespace(k8s.namespace).list();
             Assertions.assertEquals(1, podList.getItems().size());
-            Pod pod = podList.getItems().get(0);
+            Pod pod = podList.getItems().getFirst();
             Assertions.assertEquals("Running", pod.getStatus().getPhase());
             Assertions.assertEquals(k8s.namespace, pod.getMetadata().getNamespace());
             Assertions.assertEquals("sp-pod-" + proxy.getId() + "-0", pod.getMetadata().getName());
             Assertions.assertEquals(1, pod.getStatus().getContainerStatuses().size());
-            ContainerStatus container = pod.getStatus().getContainerStatuses().get(0);
+            ContainerStatus container = pod.getStatus().getContainerStatuses().getFirst();
             Assertions.assertEquals(true, container.getReady());
             Assertions.assertTrue(container.getImage().endsWith("openanalytics/shinyproxy-integration-test-app:latest"));
-            Assertions.assertFalse(pod.getSpec().getContainers().get(0).getSecurityContext().getPrivileged());
+            Assertions.assertFalse(pod.getSpec().getContainers().getFirst().getSecurityContext().getPrivileged());
             Assertions.assertEquals(List.of("9.9.9.9"), pod.getSpec().getDnsConfig().getNameservers());
 
             inst.proxyService.stopProxy(null, proxy, true).run();
@@ -1536,8 +1544,8 @@ public class TestIntegrationOnKube {
         boolean cleanedUp = Retrying.retry((c, m) -> {
             List<Pod> pods1 = k8s.client.pods().inNamespace(k8s.namespace).list().getItems();
             List<Pod> pods2 = k8s.client.pods().inNamespace(k8s.overriddenNamespace).list().getItems();
-            return pods1.isEmpty() && pods2.isEmpty();
-        }, 5_000, "assert no pods", 1, true);
+            return new Retrying.Result(pods1.isEmpty() && pods2.isEmpty());
+        }, 5_000, "assert no pods", 1);
         Assertions.assertTrue(cleanedUp);
         Assertions.assertEquals(0, inst.proxyService.getAllProxies().size());
     }
@@ -1546,8 +1554,8 @@ public class TestIntegrationOnKube {
         boolean cleanedUp = Retrying.retry((c, m) -> {
             List<PersistentVolumeClaim> pods1 = k8s.client.persistentVolumeClaims().inNamespace(k8s.namespace).list().getItems();
             List<PersistentVolumeClaim> pods2 = k8s.client.persistentVolumeClaims().inNamespace(k8s.overriddenNamespace).list().getItems();
-            return pods1.isEmpty() && pods2.isEmpty();
-        }, 5_000, "assert no pvcs", 1, true);
+            return new Retrying.Result(pods1.isEmpty() && pods2.isEmpty());
+        }, 5_000, "assert no pvcs", 1);
         Assertions.assertTrue(cleanedUp);
     }
 
@@ -1555,8 +1563,8 @@ public class TestIntegrationOnKube {
         boolean cleanedUp = Retrying.retry((c, m) -> {
             List<Secret> pods1 = k8s.getSecrets(k8s.namespace);
             List<Secret> pods2 = k8s.getSecrets(k8s.overriddenNamespace);
-            return pods1.isEmpty() && pods2.isEmpty();
-        }, 5_000, "assert no secrets", 1, true);
+            return new Retrying.Result(pods1.isEmpty() && pods2.isEmpty());
+        }, 5_000, "assert no secrets", 1);
         Assertions.assertTrue(cleanedUp);
     }
 
@@ -1564,8 +1572,8 @@ public class TestIntegrationOnKube {
         boolean cleanedUp = Retrying.retry((c, m) -> {
             List<Service> pods1 = k8s.client.services().inNamespace(k8s.namespace).list().getItems();
             List<Service> pods2 = k8s.client.services().inNamespace(k8s.overriddenNamespace).list().getItems();
-            return pods1.isEmpty() && pods2.isEmpty();
-        }, 5_000, "assert no secrets", 1, true);
+            return new Retrying.Result(pods1.isEmpty() && pods2.isEmpty());
+        }, 5_000, "assert no secrets", 1);
         Assertions.assertTrue(cleanedUp);
     }
 
